# azure-iot-sdk-c

./: .gitignore  CMakeLists.txt  component.mk
cpp_wrapper/: CMakeLists.txt  aioth_client.cpp  aioth_client.h  aioth_service.cpp  aioth_service.h
cpp_wrapper/tests/: CMakeLists.txt  client_receive_message.cpp  client_receive_message_sample.cpp  client_send_message.cpp  connection.h  device_twin_send.cpp  device_twin_update.cpp  direct_method.cpp  direct_method_sample.cpp  service_send_message_ll_sample.cpp
iothub_client/inc/: iothub_client_core_ll.h  iothub_module_client.h  iothub_module_client_ll.h
iothub_client/inc/internal/: iothub_module_client_ll_method.h
iothub_client/samples/iothub_client_sample_module_method_invoke/: iothub_client_sample_module_method_invoke.c
iothub_client/src/: iothub_client_core_ll.c  iothub_module_client.c  iothub_module_client_ll.c  iothub_module_client_ll_method.c  iothubtransport_mqtt_common.c
provisioning_service_client/inc/prov_service_client/: provisioning_sc_device_capabilities.h  provisioning_sc_enrollment.h  provisioning_sc_json_const.h
provisioning_service_client/src/: provisioning_sc_device_capabilities.c  provisioning_sc_enrollment.c
serializer/src/: agenttypesystem.c
